# datrie-rs

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  ChangeLog  Justfile  Makefile  README  c2rust-lib.rs  configure.ac  pyproject.toml
.github/workflows/: ci-python.yml  ci.yml  safety.yml  scheduled.yml  test.yml
crates/datrie/: Cargo.toml
crates/datrie-clib/: Cargo.toml
crates/datrie-clib/src/: alpha_map.rs  lib.rs  trie.rs
crates/datrie-test-suite/: Cargo.toml  build.rs
crates/datrie-test-suite/src/: lib.rs
crates/datrie-test-suite/tests/api/: main.rs  test_byte_alpha.rs  test_byte_list.rs  test_file.rs  test_iterator.rs  test_nonalpha.rs  test_null_trie.rs  test_serialization.rs  test_store_retrieve.rs  test_term_state.rs  test_walk.rs  utils.rs
crates/datrie/src/: alpha_map.rs  darray.rs  lib.rs  trie.rs  trie_str.rs
crates/datrie/src/alpha_map/: tests.rs
crates/datrie/src/trie/: tail.rs  tests.rs
crates/datrie/tests/api/: test_byte_alpha.rs  test_byte_list.rs  test_file.rs  test_nonalpha.rs  test_null_trie.rs  test_serialization.rs  test_store_retrieve.rs  test_term_state.rs  test_walk.rs  utils.rs
crates/python-datrie-rs/: Cargo.toml
crates/python-datrie-rs/src/: alpha_map.rs  lib.rs
datrie/: alpha_map.rs  darray.rs  fileutils.rs  tail.rs  trie.rs
man/: trietool.1
nsis/: ChangeLog  SearchReplace.nsh  WriteEnvStr.nsh  WritePathStr.nsh  libdatrie.nsi
python/datrie_rs/: __init__.py  _datrie_rs.pyi
src/clib/: Cargo.toml  alpha_map.rs  darray.rs  dstring.rs  fileutils.rs  lib.rs  trie.rs  trie_string.rs
src/lib/: Cargo.toml  alpha_map.rs  alpha_str.rs  darray.rs  dstring.rs  error.rs  fileutils.rs  lib.rs  tail.rs  trie.rs  trie_char_string.rs  trie_string.rs
src/lib/alpha_map/: tests.rs
src/lib/tests/api/: test_byte_alpha.rs  test_byte_list.rs  test_file.rs  test_iterator.rs  test_nonalpha.rs  test_null_trie.rs  test_serialization.rs  test_store_retrieve.rs  test_term_state.rs  test_walk.rs  utils.rs
src/lib/trie/: tail.rs  tests.rs  trie_str.rs
src/lib/trie/tail/: tests.rs
tests/: Justfile  Makefile.am  test_iteration.py  test_random.py  test_state.py  test_trie.py
tools/: Cargo.toml  trietool.rs
