[workspace]
members = [
]
[package]
name = "c2rust_out"
authors = ["C2Rust"]
version = "0.0.0"
publish = false
edition = "2021"
autobins = false

[lib]
name = "datrie"
path = "c2rust-lib.rs"
crate-type = ["staticlib", "cdylib"]

[dependencies]
android_log-sys = "0.3.1"
libc = "0.2"
ndk-sys = "0.5.0"
