[package]
name = "datrie-clib"
authors = ["C2Rust"]
version = { workspace = true }
edition = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "datrie"
crate-type = ["cdylib", "staticlib"]
test = false
doctest = false
doc = false

[dependencies]
datrie = { workspace = true }
android_log-sys = "0.3"
libc = { workspace = true }

[dev-dependencies]
anyhow = "1.0.92"
